--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
       <h2 id="found">Number Search For</h2>
       <h3>Time Elapsed</h3>
     </div>
-    <script src="occupyparking.js"></script>
+    <script src="lesson.js"></script>
   </body>
 </html>
