--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -5,10 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pet Store</title>
+    <link rel="stylesheet" href="/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@500&amp;family=Manrope:wght@500&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <h1 class = "title"> PET STORE</h1>
+    <h2 class = "allpets">ALL PETS</h2>
+    <h2 class = "dogs">DOGS</h2>
+    <h2 class = "cats">CATS</h2>
+    <h2 class = "birds">BIRDS</h2>
+    <script type="module" src="./js/vite.js"></script>
   </body>
 </html>
