wee wee sucks butt

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -9,14 +9,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@500&amp;family=Manrope:wght@500&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <h1 class = "title"> PET STORE</h1>
+    <div>
     <h2 class = "allpets">ALL PETS</h2>
     <h2 class = "dogs">DOGS</h2>
     <h2 class = "cats">CATS</h2>
     <h2 class = "birds">BIRDS</h2>
+  </div id ="uwu">
     <script type="module" src="./js/vite.js"></script>
   </body>
 </html>
