ugh wee wee still sucks ass/

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -13,12 +13,12 @@
   </head>
   <body>
     <h1 class = "title"> PET STORE</h1>
-    <div>
+    <div id ="uwu">
     <h2 class = "allpets">ALL PETS</h2>
     <h2 class = "dogs">DOGS</h2>
     <h2 class = "cats">CATS</h2>
     <h2 class = "birds">BIRDS</h2>
-  </div id ="uwu">
+  </div>
     <script type="module" src="./js/vite.js"></script>
   </body>
 </html>
