RAHHHH LATE NIGHT CODING PART 2

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -14,10 +14,10 @@
   <body>
     <h1 class = "title"> PET STORE</h1>
     <div id ="uwu">
-    <h2 class = "allpets">ALL PETS</h2>
-    <h2 class = "dogs">DOGS</h2>
-    <h2 class = "cats">CATS</h2>
-    <h2 class = "birds">BIRDS</h2>
+    <h2> <button = "allpets">ALL PETS</button></h2>
+    <h2> <button class = "dogs">DOGS</button></h2>
+    <h2> <button class = "cats">CATS</button></h2>
+    <h2> <button class = "birds">BIRDS</button></h2>
   </div>
     <script type="module" src="./js/vite.js"></script>
   </body>
