--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -14,7 +14,7 @@
   <body>
     <h1 class = "title"> PET STORE</h1>
     <div id ="uwu">
-    <h2> <button = "allpets">ALL PETS</button></h2>
+    <h2> <button class = "allpets">ALL PETS</button></h2>
     <h2> <button class = "dogs">DOGS</button></h2>
     <h2> <button class = "cats">CATS</button></h2>
     <h2> <button class = "birds">BIRDS</button></h2>
