made it look slightly prettier

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <h1 class = "title"> PET STORE</h1>
+    <h1 class = "title"> WE DON'T SCAM YOU!!!</h1>
     <div id ="uwu">
     <h2> <button class = "allpets">ALL PETS</button></h2>
     <h2> <button class = "dogs">DOGS</button></h2>
