--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -13,6 +13,10 @@
   </head>
   <body>
     <h1 class = "title"> WE DON'T SCAM YOU!!!</h1>
+    <div id="themes">
+    <h2><button class="dark">A DARKER THEME</button></h2>
+    <h2><button class="light">DEFAULT, LIGHTER THEME</button></h2>
+  </div>
     <div id ="uwu">
     <h2> <button class = "allpets">ALL PETS</button></h2>
     <h2> <button class = "dogs">DOGS</button></h2>
