added themes code did not test yet

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -23,6 +23,8 @@
     <h2><button class = "cats">CATS</button></h2>
     <h2><button class = "birds">BIRDS</button></h2>
   </div>
+
+  <div class="page"></div>
     <script type="module" src="./js/vite.js"></script>
   </body>
 </html>
