--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -18,13 +18,13 @@
     <h2><button class="light">DEFAULT, LIGHTER THEME</button></h2>
   </div>
     <div id ="uwu">
-    <h2><button class = "allpets">ALL PETS</button></h2>
+    <h2><button class = "everything">ALL PETS</button></h2>
     <h2><button class = "dogs">DOGS</button></h2>
     <h2><button class = "cats">CATS</button></h2>
     <h2><button class = "birds">BIRDS</button></h2>
   </div>
 
   <div class="page"></div>
-    <script type="module" src="./js/vite.js"></script>
+    <script type="module" src="./js/dom.js"></script>
   </body>
 </html>
