--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -14,17 +14,15 @@
   <body>
     <h1 class = "title"> WE DON'T SCAM YOU!!!</h1>
     <div id="themes">
-    <h2><button class="dark">A DARKER THEME</button></h2>
-    <h2><button class="light">DEFAULT, LIGHTER THEME</button></h2>
-  </div>
-    <div id ="uwu">
-    <h2><button class = "everything">ALL PETS</button></h2>
-    <h2><button class = "dogs">DOGS</button></h2>
-    <h2><button class = "cats">CATS</button></h2>
-    <h2><button class = "birds">BIRDS</button></h2>
-  </div>
-
-  <div class="page"></div>
-    <script type="module" src="./js/dom.js"></script>
+      <button class="dark">A DARKER THEME</button>
+      <button class="light">DEFAULT, LIGHTER THEME</button>
+    </div>
+    <div id ="button-holder">
+      <h2><button class = "everything">ALL PETS</button></h2>
+      <h2><button class = "dogs">DOGS</button></h2>
+      <h2><button class = "cats">CATS</button></h2>
+      <h2><button class = "birds">BIRDS</button></h2>
+    </div>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
