--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -13,15 +13,15 @@
   </head>
   <body>
     <h1 class = "title"> WE DON'T SCAM YOU!!!</h1>
-    <div id="themes">
+    <div class="themes">
       <button class="dark">A DARKER THEME</button>
-      <button class="light">DEFAULT, LIGHTER THEME</button>
+      <button class="light">A LIGHTER THEME</button>
     </div>
-    <div id ="button-holder">
+    <div id ="btn">
       <h2><button class = "everything">ALL PETS</button></h2>
-      <h2><button class = "dogs">DOGS</button></h2>
-      <h2><button class = "cats">CATS</button></h2>
-      <h2><button class = "birds">BIRDS</button></h2>
+      <h2><button class = "dawg">DOGS</button></h2>
+      <h2><button class = "meow">CATS</button></h2>
+      <h2><button class = "chirp">BIRDS</button></h2>
     </div>
     <script type="module" src="./js/main.js"></script>
   </body>
