--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -9,11 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@500&amp;family=Manrope:wght@500&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <h1 class = "title"> WE DON'T SCAM YOU!!!</h1>
-    <div class="themes">
+    <div id="themes">
       <button class="dark">A DARKER THEME</button>
       <button class="light">A LIGHTER THEME</button>
     </div>
@@ -23,6 +22,7 @@
       <h2><button class = "meow">CATS</button></h2>
       <h2><button class = "chirp">BIRDS</button></h2>
     </div>
+    <div class="cardList" id="container"></div>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
