--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -5,11 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pet Store</title>
-    <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@500&amp;family=Manrope:wght@500&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body class="body">
     <h1 class = "title"> WE DON'T SCAM YOU!!!</h1>
@@ -24,7 +23,7 @@
       <h2><button class = "chirp">BIRDS</button></h2>
     </div>
     <div class="cardList" id="container">
-      
+
     </div>
     <script type="module" src="./js/main.js"></script>
 
